# Post-Automation

./: .env.example  .gitignore  CLAUDE.md  PROJECT_CONTEXT.md  PROJECT_SPEC.md  README.md  pyproject.toml
.github/workflows/: dashboard_run.yml  publish.yml  weekly_run.yml
agents/: content_agent.py  creative_agent.py  image_agent.py  orchestrator.py  scraper_agent.py
config/: logging.py  settings.py
core/interfaces/: content_generator.py  image_provider.py  publisher.py  scraper.py
core/models/: post.py  raw_content.py  schedule_slot.py
dashboard/: package-lock.json  package.json
generators/: creative_post.py  educational_post.py
generators/prompts/: creative_anime.jinja2  creative_history.jinja2  creative_movies.jinja2  educational.jinja2
image_providers/: jikan.py  pexels.py  tmdb.py  unsplash.py
publishers/: discord.py  reddit.py  reddit_browser.py
scheduler/: gmail_notifier.py  google_calendar.py  runner.py  time_optimizer.py
scrapers/: cambridge_scraper.py  ib_official.py  news_scraper.py  reddit_scraper.py  youtube_scraper.py
scripts/: dry_run.py  import_reddit_cookies.py  mini_run.py  publish_due.py  reddit_login.py  test_discord.py
storage/: database.py
storage/migrations/: 001_initial_schema.sql  002_image_subject.sql  003_gcal_event_id.sql  004_drop_gcal_event_id.sql
storage/repositories/: post_repository.py  raw_content_repository.py  run_log_repository.py
tests/: test_config.py  test_e2e.py
tests/test_generators/: test_generators.py
tests/test_image/: test_image_agent.py
tests/test_models/: test_models.py
(+27 files in other folders)
